--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+
+# vscode folders and settings
+.vscode
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# C extensions
+*.so
+
+
 etamp/testIO_symk/found_plans
 
 Darias/TASK_regrasp/A_actionPlans
